[package]
authors = ["QEDK <qedk.en@gmail.com>"]
categories = ["config", "encoding", "parser-implementations"]
description = "A simple configuration parsing utility with no dependencies that allows you to parse INI and ini-style syntax. You can use this to write Rust programs which can be customized by end users easily."
documentation = "https://docs.rs/configparser"
edition = "2021"
homepage = "https://github.com/QEDK/configparser-rs"
keywords = ["config", "ini", "settings", "configuration", "parser"]
license = "MIT OR LGPL-3.0-or-later"
name = "configparser"
readme = "README.md"
repository = "https://github.com/QEDK/configparser-rs"
version = "3.0.0"

[badges]
maintenance = {status = "actively-developed"}
travis-ci = {repository = "QEDK/configparser", branch = "master"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = {version = "2", optional = true}
